test/scc/expr/semantic-errors/163.t
struct
{
	int b;
	struct
	{
		int a;
	};
} b = { 10, 20, { .a = 30 } };